ajustes aí
