# app/Http/Controllers/RecommendationController.php
@@ -15,6 +15,33 @@ class RecommendationController extends Controller
         $this->recommendationService = $recommendationService;
     }
 
+    /**
+     * @OA\Get(
+     *      path="/api/recommendation",
+     *      description="Return all recommendation enabled",
+     *      operationId="getAllRecommendation",
+     *      tags={"Recommendation"},
+     *      summary="Get list recommendation",
+     *      description="Returns list of recommendation",
+     *      @OA\Response(
+     *          response=200,
+     *          description="OK"
+     *       ),
+     *      @OA\Response(
+     *         response=422,
+     *         description="Missing Data"
+     *      ),
+     *      @OA\Response(
+     *          response=401,
+     *          description="Unauthenticated",
+     *      ),
+     *      @OA\Response(
+     *          response=403,
+     *          description="Forbidden"
+     *      )
+     *     )
+     */
+
     public function index()
     {
         return RecommendationResource::collection($this->recommendationService->get());
@@ -29,6 +56,28 @@ class RecommendationController extends Controller
     {
         return $this->recommendationService->store($request);
     }
+
+    /**
+     * @OA\Delete(
+     *     tags={"Recommendation"},
+     *     path="/api/recommendation/{id}",
+     *     security={{"bearer_token":{}}},
+     *     description="Destroy recommendation",
+     *     @OA\Parameter(
+     *         name="id",
+     *         in="path",
+     *         description="ID recommendation",
+     *         required=true,
+     *         @OA\Schema(
+     *             type="integer",
+     *         )
+     *     ),
+     *     @OA\Response(response=200, description="Success."),
+     *     @OA\Response(response=401, description="permission denied ."),
+     *     @OA\Response(response=404, description="User not found."),
+     *     @OA\Response(response=422, description="Unprocessable Entity"),
+     * ),
+    */
 
     public function destroy($id)
     {
